Fix zoom issue on mobile

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
 body {
 	text-align: center;
 	background-color: #191919;
+	touch-action: manipulation;
 }
 
 #level-title {
